# zero2prod

./: Cargo.toml  LICENSE  Makefile
.github/workflows/: audit-on-push.yml  audit.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
